Fix workflow metadata PUBLIC / PRIVATE not invisible anymore

--- a/assets/css/components/Navbar.scss
+++ b/assets/css/components/Navbar.scss
@@ -113,7 +113,9 @@
 .workflow-container .navbar {
   padding: 1rem 2.5rem 1rem 2rem;
 
-  li,span {color:$white}
+  li,span {
+    color:$white;
+  }
 
   .logo-navbar {
     margin-right: 1.5rem;
@@ -139,6 +141,10 @@
         line-height: 1.3rem;
         height: 1rem;
       }
+
+    .publicPrivate:hover {text-decoration: underline;}
+
+
     }
 
     .editable-title--field {
